- Solved #17, form threads being hour in the future - Fixed creating new thread not redirecting properly - Fixed "Create new thread" button leading to nowhere - Changed blog edit code to check ownership better - Fixed notifications button not always working - Fixed tiny gap above the form thread's author box

--- a/Ogma3/wwwroot/css/src/elements/comment.sass
+++ b/Ogma3/wwwroot/css/src/elements/comment.sass
@@ -4,7 +4,7 @@
   contain: content
   display: flex
   flex-direction: row
-  align-items: baseline
+  align-items: flex-start
   padding: .5rem 0
   &:hover .author, &:hover .main
     border-color: v.$foreground-75
